[gd_scene load_steps=2 format=3 uid="uid://m4ddqskyou0k"]

[ext_resource type="Script" path="res://MapLevel/MapLevel.gd" id="1_8uvfa"]

[node name="MapLevel" type="Panel"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8uvfa")

[node name="MapNode" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map1" type="Panel" parent="MapNode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MapNode/Map1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map2" type="Panel" parent="MapNode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MapNode/Map2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map3" type="Panel" parent="MapNode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MapNode/Map3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map4" type="Panel" parent="MapNode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MapNode/Map4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map5" type="Panel" parent="MapNode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MapNode/Map5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map6" type="Panel" parent="MapNode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MapNode/Map6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map7" type="Panel" parent="MapNode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MapNode/Map7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
